// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.


syntax = "proto3";

option java_package = "com.zededa.cloud.uservice.proto";
option go_package = "github.com/zededa/eve/sdk/go/zconfig";

import "devcommon.proto";

message SignatureInfo {
	string intercertsurl = 1;
	string signercerturl = 2;
	bytes signature = 3;
}

enum DsType {
	DsUnknown = 0;
	DsHttp  = 1;
	DsHttps = 2;
	DsS3    = 3;
	DsSFTP	= 4;	
}

message DatastoreConfig {
	string id = 100;

	DsType dType = 1;

	string fqdn = 2;

	string apiKey = 3;

	string password = 4;

	// depending on datastore types, it could be bucket or path
	string dpath = 5;

	// Applies for some datastore types
	string region = 6;
}


enum Format {
	FmtUnknown = 0;	
	RAW   = 1;
	QCOW  = 2;
	QCOW2 = 3;
	VHD   = 4;
	VMDK  = 5;
	OVA   = 6;
	VHDX  = 7;
}

message Image {
	UUIDandVersion uuidandversion = 1;
	// it could be relative path/name as well
	string name = 2;

	string sha256 = 3;
	Format iformat = 4;

	// if its signed image
	SignatureInfo siginfo = 5;

	string dsId = 6;
	int64 sizeBytes = 8;
}

enum Target {
	TgtUnknown = 0;
	Disk   = 1;
	Kernel = 2;
	Initrd = 3;
	RamDisk = 4;
	// XXX DeviceTree?
}

enum DriveType {
	Unclassified = 0;
	CDROM   = 1;
	HDD     = 2;
	NET     = 3;

	// this type is allocate the empty disk of maxsizebytes specified
	HDD_EMPTY  = 4;
}

message Drive {
	Image image = 1;
	bool readonly = 5;
	bool preserve = 6;
	DriveType drvtype = 8;
	Target target = 9;
	// Initial image need to be resized to this size.
	// A value of 0 will indicate that no resizing is required
	int64 maxsizebytes = 10;
}
